JSTOOLS 2.6 ajout d'un formulaire de submit en ajax de formulaire réutilisable correction z-index champs upload

--- a/skin/plupload/plupload_clementine.css
+++ b/skin/plupload/plupload_clementine.css
@@ -19,3 +19,6 @@ div.AnyTime-win {
     overflow: hidden;
     vertical-align: middle;
 }
+.clementine_crud-plupload_container > form {
+    z-index: -1 !important;
+}
